--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "prepare": "husky"
   },
   "devDependencies": {
-    "turbo": "^1.12.4",
-    "typescript": "^5.3.3",
-    "prettier": "^3.2.5",
-    "eslint": "^8.57.0",
     "@typescript-eslint/eslint-plugin": "^7.1.0",
     "@typescript-eslint/parser": "^7.1.0",
-    "husky": "^9.0.11"
+    "eslint": "^8.57.0",
+    "husky": "^9.0.11",
+    "prettier": "^3.2.5",
+    "turbo": "^1.13.4",
+    "typescript": "^5.3.3"
   }
 }
