finally have the monorepo working and creating users

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,8 +1,14 @@
-node_modules
 .git
-.env
-dist
-build
-.turbo
+.gitignore
 .next
 .cache
+dist
+build
+node_modules
+README.md
+.env*
+.dockerignore
+Dockerfile
+npm-debug.log
+.turbo
+coverage
