--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "ts-node-dev --esm --respawn --transpile-only src/server.ts",
+    "dev": "tsx watch src/index.ts",
     "build": "tsc -b",
-    "start": "node dist/server.js",
+    "start": "node dist/index.js",
     "lint": "eslint .",
     "test": "jest",
     "clean": "rm -rf dist node_modules",
@@ -19,7 +19,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -34,7 +35,8 @@
     "jest": "^29.7.0",
     "prisma": "^5.22.0",
     "ts-jest": "^29.1.2",
-    "ts-node-dev": "^2.0.0",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.7.0",
     "typescript": "^5.7.2"
   },
   "main": "index.js",
