--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.722.0",
+    "@aws-sdk/lib-storage": "^3.722.0",
     "@aws-sdk/s3-request-presigner": "^3.722.0",
     "@prisma/client": "^5.22.0",
     "bcryptjs": "^2.4.3",
