Implement basic PDF text extraction

--- a/packages/resume-parser/Cargo.toml
+++ b/packages/resume-parser/Cargo.toml
@@ -24,7 +24,6 @@ config = { version = "0.14", features = ["yaml"] }
 dotenv = "0.15"
 
 # PDF processing
-lopdf = "0.31"
 pdf-extract = "0.7"
 
 # AWS S3 - Updated to latest stable versions
@@ -45,3 +44,6 @@ uuid = { version = "1.7", features = ["v4", "serde"] }
 axum = "0.7"
 tower = "0.4"
 tower-http = { version = "0.5", features = ["trace"] }
+
+# Testing
+tempfile = "3.10"
