--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -88,12 +88,31 @@ services:
       BUCKET_NAME: ${BUCKET_NAME}
       RABBITMQ_URL: amqp://guest:guest@rabbitmq:5672
       PORT: "3001"
+    ports:
+      - "3001:3001"
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:3001/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 10s
     depends_on:
       db:
         condition: service_healthy
+      rabbitmq:
+        condition: service_healthy
+
+  rabbitmq:
+    image: rabbitmq:3-management
     ports:
-      - "3001:3001"
+      - "5672:5672"   # AMQP protocol port
+      - "15672:15672" # Management UI
+    healthcheck:
+      test: ["CMD", "rabbitmq-diagnostics", "check_port_connectivity"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
 volumes:
   postgres_data:
