--- a/packages/resume-parser/Cargo.toml
+++ b/packages/resume-parser/Cargo.toml
@@ -47,3 +47,7 @@ tower-http = { version = "0.5", features = ["trace"] }
 
 # Testing
 tempfile = "3.10"
+
+# Entity extraction
+regex = "1.10"
+lazy_static = "1.4"
