Add API endpoints for parsing - tested docker deployment

--- a/packages/resume-parser/Dockerfile
+++ b/packages/resume-parser/Dockerfile
@@ -1,5 +1,5 @@
 # Build stage
-FROM rust:1.77 as builder
+FROM rust:1.83-slim-bullseye AS builder
 
 WORKDIR /app
 
@@ -9,52 +9,40 @@ RUN apt-get update && apt-get install -y \
     libssl-dev \
     && rm -rf /var/lib/apt/lists/*
 
-# Copy the Cargo files
+# Copy manifests
 COPY packages/resume-parser/Cargo.toml ./Cargo.toml
 
-# Create src directory and dummy main.rs for dependency caching
+# Create dummy source and build dependencies
 RUN mkdir -p src && \
     echo 'fn main() { println!("Initializing resume-parser..."); }' > src/main.rs
 
-# Build dependencies
 RUN cargo build --release
 
 # Remove the dummy source and built files
-RUN rm src/main.rs target/release/deps/resume_parser*
+RUN rm -rf src target/release/deps/resume_parser*
 
-# Copy the actual source code
+# Copy actual source code
 COPY packages/resume-parser/src ./src
-COPY packages/resume-parser/config ./config
 
-# Build the application
+# Build the actual binary
 RUN cargo build --release
 
 # Runtime stage
-FROM debian:bookworm-slim
+FROM debian:bullseye-slim
 
 WORKDIR /app
 
 # Install runtime dependencies
 RUN apt-get update && apt-get install -y \
     ca-certificates \
-    libssl3 \
+    libssl1.1 \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy the binary from builder
-COPY --from=builder /app/target/release/resume-parser /usr/local/bin/
-COPY --from=builder /app/config ./config
+COPY --from=builder /app/target/release/resume-parser .
 
-# Create a non-root user
-RUN useradd -m -U -s /bin/false resume-parser
-
-# Set ownership
-RUN chown -R resume-parser:resume-parser /app
-
-# Switch to non-root user
-USER resume-parser
-
-# Expose the port
+# Expose the port the server listens on
 EXPOSE 3001
 
-# Set the entrypoint
-ENTRYPOINT ["/usr/local/bin/resume-parser"] 
+# Run the binary
+CMD ["./resume-parser"] 
