--- a/packages/resume-parser/Cargo.toml
+++ b/packages/resume-parser/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 # Async runtime
-tokio = { version = "1.36", features = ["full"] }
+tokio = { version = "1.42", features = ["full"] }
 
 # Serialization
 serde = { version = "1.0", features = ["derive"] }
@@ -21,33 +21,43 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 
 # Configuration
 config = { version = "0.14", features = ["yaml"] }
-dotenv = "0.15"
+dotenvy = "0.15"
 
 # PDF processing
 pdf-extract = "0.7"
 
 # AWS S3 - Updated to latest stable versions
-aws-config = "1.1.1"
-aws-sdk-s3 = "1.12.0"
+aws-config = "1.5.13"
+aws-sdk-s3 = "1.68.0"
+aws-sdk-sts = "1.54.0"
+aws-types = "1.3.3"
+aws-credential-types = "1.2.1"
+aws-sdk-sso = "1.4.0"
 
 # Database
-sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "json"] }
+sqlx = { version = "0.8.1", features = ["runtime-tokio", "tls-rustls", "postgres"] }
 
 # Queue
-lapin = "2.3"  # RabbitMQ client
+lapin = "2.5"  # RabbitMQ client
 
 # Utilities
 chrono = { version = "0.4", features = ["serde"] }
-uuid = { version = "1.7", features = ["v4", "serde"] }
+uuid = { version = "1.11", features = ["v4", "serde"] }
 
 # HTTP server
-axum = "0.7"
-tower = "0.4"
-tower-http = { version = "0.5", features = ["trace"] }
+axum = { version = "0.7", features = ["multipart"] }
+tower = { version = "0.4", features = ["util"] }
+tower-http = { version = "0.5", features = ["cors"] }
 
 # Testing
-tempfile = "3.10"
+tempfile = "3.15"
 
 # Entity extraction
-regex = "1.10"
-lazy_static = "1.4"
+regex = "1.11"
+lazy_static = "1.5"
+
+# Pin home crate to version compatible with Rust 1.77.0
+home = "0.5.4"
+
+[dev-dependencies]
+reqwest = "0.11"
