--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 services:
   frontend:
     build: 
@@ -48,13 +47,16 @@ services:
         condition: service_healthy
 
   db:
-    image: postgres:15-alpine
+    image: postgres:15
     environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=oomi
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: oomi
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    ports:
+      - "5433:5432"
+    user: postgres
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 5s
@@ -77,18 +79,16 @@ services:
     build:
       context: .
       dockerfile: packages/resume-parser/Dockerfile.dev
+    environment:
+      - DATABASE_URL=postgresql://postgres:postgres@db:5432/oomi
+      - APP_ENVIRONMENT=development
+      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
+      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
+      - AWS_REGION=${AWS_REGION}
+      - S3_BUCKET=${BUCKET_NAME}
+      - RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672
     volumes:
       - ./packages/resume-parser:/app
-      - resume_parser_target:/app/target
-    environment:
-      DATABASE_URL: postgresql://postgres:postgres@db:5432/oomi
-      AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
-      AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
-      AWS_ENDPOINT_URL_S3: ${AWS_ENDPOINT_URL_S3}
-      AWS_REGION: ${AWS_REGION:-auto}
-      BUCKET_NAME: ${BUCKET_NAME}
-      RABBITMQ_URL: amqp://guest:guest@rabbitmq:5672
-      PORT: "3001"
     ports:
       - "3001:3001"
     restart: unless-stopped
@@ -114,17 +114,6 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
-
-  postgres:
-    image: postgres:15
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: resume_parser
-    ports:
-      - "5432:5432"
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
 
 volumes:
   postgres_data:
