--- a/packages/resume-parser/Cargo.toml
+++ b/packages/resume-parser/Cargo.toml
@@ -35,7 +35,13 @@ aws-credential-types = "1.2.1"
 aws-sdk-sso = "1.4.0"
 
 # Database
-sqlx = { version = "0.8.1", features = ["runtime-tokio", "tls-rustls", "postgres"] }
+sqlx = { version = "0.8.1", features = [
+    "runtime-tokio",
+    "tls-rustls",
+    "postgres",
+    "uuid",
+    "json"
+] }
 
 # Queue
 lapin = "2.5"  # RabbitMQ client
