--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -109,11 +109,14 @@ services:
     ports:
       - "5672:5672"   # AMQP protocol port
       - "15672:15672" # Management UI
+    environment:
+      - RABBITMQ_DEFAULT_USER=guest
+      - RABBITMQ_DEFAULT_PASS=guest
     healthcheck:
-      test: ["CMD", "rabbitmq-diagnostics", "check_port_connectivity"]
+      test: ["CMD", "rabbitmq-diagnostics", "check_port_connectivity", "rabbitmqctl", "status"]
       interval: 30s
       timeout: 10s
-      retries: 3
+      retries: 5
 
 volumes:
   postgres_data:
