--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "oomi-ai",
   "version": "1.0.0",
   "private": true,
+  "packageManager": "npm@10.8.2",
   "workspaces": [
     "packages/*"
   ],
