--- a/packages/resume-parser/Cargo.toml
+++ b/packages/resume-parser/Cargo.toml
@@ -33,6 +33,7 @@ aws-sdk-sts = "1.54.0"
 aws-types = "1.3.3"
 aws-credential-types = "1.2.1"
 aws-sdk-sso = "1.4.0"
+aws-smithy-runtime-api = "1.1.0"
 
 # Database
 sqlx = { version = "0.8.1", features = [
@@ -51,7 +52,7 @@ chrono = { version = "0.4", features = ["serde"] }
 uuid = { version = "1.11", features = ["v4", "serde"] }
 
 # HTTP server
-axum = { version = "0.7", features = ["multipart"] }
+axum = { version = "0.7", features = ["multipart", "macros"] }
 tower = { version = "0.4", features = ["util"] }
 tower-http = { version = "0.5", features = ["cors"] }
 
