simplifying resume-parsrer service

--- a/packages/resume-parser/Cargo.toml
+++ b/packages/resume-parser/Cargo.toml
@@ -4,10 +4,12 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-# Async runtime
-tokio = { version = "1.42", features = ["full"] }
+# Remove HTTP server dependencies
+axum = { version = "0.7", optional = true }
+tower-http = { version = "0.5", optional = true }
 
-# Serialization
+# Keep core dependencies
+tokio = { version = "1.42", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
@@ -35,26 +37,12 @@ aws-credential-types = "1.2.1"
 aws-sdk-sso = "1.4.0"
 aws-smithy-runtime-api = "1.1.0"
 
-# Database
-sqlx = { version = "0.8.1", features = [
-    "runtime-tokio",
-    "tls-rustls",
-    "postgres",
-    "uuid",
-    "json"
-] }
-
 # Queue
 lapin = "2.5"  # RabbitMQ client
 
 # Utilities
 chrono = { version = "0.4", features = ["serde"] }
 uuid = { version = "1.11", features = ["v4", "serde"] }
-
-# HTTP server
-axum = { version = "0.7", features = ["multipart", "macros"] }
-tower = { version = "0.4", features = ["util"] }
-tower-http = { version = "0.5", features = ["cors"] }
 
 # Testing
 tempfile = "3.15"
