--- a/packages/resume-parser/Cargo.toml
+++ b/packages/resume-parser/Cargo.toml
@@ -4,12 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-# Remove HTTP server dependencies
-axum = { version = "0.7", optional = true }
-tower-http = { version = "0.5", optional = true }
-
-# Keep core dependencies
+# Async runtime
 tokio = { version = "1.42", features = ["full"] }
+
+# Serialization
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
@@ -28,31 +26,32 @@ dotenvy = "0.15"
 # PDF processing
 pdf-extract = "0.7"
 
-# AWS S3 - Updated to latest stable versions
+# AWS S3
 aws-config = "1.5.13"
 aws-sdk-s3 = "1.68.0"
 aws-sdk-sts = "1.54.0"
-aws-types = "1.3.3"
+aws-types = "1.3.0"
 aws-credential-types = "1.2.1"
 aws-sdk-sso = "1.4.0"
 aws-smithy-runtime-api = "1.1.0"
 
 # Queue
-lapin = "2.5"  # RabbitMQ client
+lapin = "2.5"
+
+# Metrics
+prometheus = "0.13"
+lazy_static = "1.4"
 
 # Utilities
 chrono = { version = "0.4", features = ["serde"] }
 uuid = { version = "1.11", features = ["v4", "serde"] }
-
-# Testing
 tempfile = "3.15"
-
-# Entity extraction
 regex = "1.11"
-lazy_static = "1.5"
-
-# Pin home crate to version compatible with Rust 1.77.0
 home = "0.5.4"
 
-[dev-dependencies]
-reqwest = "0.11"
+# Optional HTTP server dependencies
+axum = { version = "0.7", optional = true }
+tower-http = { version = "0.5", optional = true }
+
+# Futures
+futures-util = "0.3"
