--- a/packages/resume-parser/Cargo.toml
+++ b/packages/resume-parser/Cargo.toml
@@ -55,3 +55,7 @@ tower-http = { version = "0.5", optional = true }
 
 # Futures
 futures-util = "0.3"
+
+[dev-dependencies]
+tokio = { version = "1.42", features = ["full", "test-util"] }
+dotenvy = "0.15"
