--- a/packages/resume-parser/Dockerfile
+++ b/packages/resume-parser/Dockerfile
@@ -1,9 +1,19 @@
-FROM rust:1.75 as builder
+FROM rust:1.83 as builder
 
 WORKDIR /usr/src/app
+
+# Copy the Cargo files first
+COPY Cargo.toml Cargo.lock ./
+
+# Create a dummy main.rs to build dependencies
+RUN mkdir src && \
+    echo "fn main() {}" > src/main.rs && \
+    cargo build --release
+
+# Now copy the actual source code
 COPY . .
 
-# Build with release optimizations
+# Build again with actual source
 RUN cargo build --release
 
 FROM debian:bookworm-slim
