--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@types/amqplib": "^0.10.6",
+    "amqplib": "^0.10.5",
     "date-fns": "^4.1.0"
   }
 }
