--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -24,7 +24,9 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "amqplib": "^0.10.3",
+    "@types/amqplib": "^0.10.4"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
