--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -18,15 +18,16 @@
     "@aws-sdk/lib-storage": "^3.722.0",
     "@aws-sdk/s3-request-presigner": "^3.722.0",
     "@prisma/client": "^5.22.0",
+    "@types/amqplib": "^0.10.4",
+    "amqplib": "^0.10.3",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
-    "zod": "^3.24.1",
-    "amqplib": "^0.10.3",
-    "@types/amqplib": "^0.10.4"
+    "socket.io": "^4.8.1",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
