--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,8 @@ services:
       - WATCHPACK_POLLING=true
     command: sh -c "cd packages/frontend && npm run dev -- --host"
     depends_on:
-      - backend
+      backend:
+        condition: service_healthy
 
   backend:
     build:
@@ -38,6 +39,12 @@ services:
         npx prisma db push --accept-data-loss &&
         npm run dev
       "
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8080/health"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+      start_period: 30s
     depends_on:
       db:
         condition: service_healthy
@@ -86,6 +93,7 @@ services:
     ports:
       - "3001:3001"
     environment:
+      - RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672
       - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
       - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
       - AWS_REGION=${AWS_REGION}
