--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.12.0",
     "multer": "^1.4.5-lts.1",
     "socket.io": "^4.8.1",
     "zod": "^3.24.1"
