--- a/packages/resume-parser/Cargo.toml
+++ b/packages/resume-parser/Cargo.toml
@@ -56,6 +56,9 @@ tower-http = { version = "0.5", optional = true }
 # Futures
 futures-util = "0.3"
 
+# reqwest
+reqwest = { version = "0.11", features = ["json"] }
+
 [dev-dependencies]
 tokio = { version = "1.42", features = ["full", "test-util"] }
 dotenvy = "0.15"
