--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,8 @@ services:
     depends_on:
       backend:
         condition: service_healthy
+    networks:
+      - app-network
 
   backend:
     build:
@@ -32,6 +34,7 @@ services:
       - DATABASE_URL=postgresql://postgres:postgres@db:5432/oomi
       - JWT_SECRET=${JWT_SECRET}
       - MONGODB_URI=mongodb://${MONGO_USER}:${MONGO_PASSWORD}@mongodb:27017/oomi?authSource=admin
+      - RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672
     command: >
       sh -c "
         cd packages/backend &&
@@ -53,6 +56,10 @@ services:
         condition: service_healthy
       mongodb:
         condition: service_healthy
+    networks:
+      - app-network
+      - db-network
+      - queue-network
 
   db:
     image: postgres:15
@@ -69,6 +76,8 @@ services:
       interval: 5s
       timeout: 5s
       retries: 5
+    networks:
+      - db-network
 
   prisma-studio:
     build: 
@@ -88,6 +97,8 @@ services:
     depends_on:
       db:
         condition: service_healthy
+    networks:
+      - db-network
 
   resume-parser:
     build:
@@ -115,6 +126,9 @@ services:
       interval: 10s
       timeout: 5s
       retries: 3
+    networks:
+      - app-network
+      - queue-network
 
   rabbitmq:
     image: rabbitmq:3-management
@@ -130,6 +144,8 @@ services:
       timeout: 10s
       retries: 5
       start_period: 40s  # Give RabbitMQ time to start up
+    networks:
+      - queue-network
 
   mongodb:
     image: mongodb/mongodb-community-server:6.0-ubi8
@@ -147,9 +163,19 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
-      start_period: 30s
+      start_period: 20s
+    networks:
+      - db-network
 
 volumes:
   postgres_data:
   resume_parser_target:
   mongodb_data:
+
+networks:
+  app-network:
+    driver: bridge
+  db-network:
+    driver: bridge
+  queue-network:
+    driver: bridge
