--- a/packages/frontend/nginx.conf
+++ b/packages/frontend/nginx.conf
@@ -4,8 +4,8 @@ server {
     
     location / {
         root /usr/share/nginx/html;
+        index index.html;
         try_files $uri $uri/ /index.html;
-        add_header Cache-Control "no-cache";
     }
     
     location /api {
