prod env looks to be working

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -6,7 +6,7 @@ services:
       dockerfile: Dockerfile.prod
       target: frontend
     ports:
-      - "80:80"
+      - "3000:80"
     networks:
       - app-network
     depends_on:
@@ -31,6 +31,11 @@ services:
       - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
       - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
       - PORT=8080
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - API_URL=http://backend:8080
+      - CORS_ORIGIN=http://localhost:3000  # Frontend URL
+      - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY}
     networks:
       - app-network
     depends_on:
@@ -43,9 +48,9 @@ services:
     command: >
       sh -c "
         echo 'Waiting for database...' &&
-        /app/wait-for-it.sh db:5432 -t 60 -- echo 'Database is up' &&
+        /app/wait-for-it.sh db:5432 &&
         npx prisma generate &&
-        npx prisma migrate deploy &&
+        npx prisma db push --skip-generate --accept-data-loss &&
         node dist/index.js
       "
     restart: unless-stopped
@@ -72,6 +77,7 @@ services:
       - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
       - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
       - RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672
+      - API_URL=http://backend:8080
     networks:
       - app-network
     depends_on:
@@ -97,7 +103,7 @@ services:
       - app-network
 
   mongodb:
-    image: mongodb/mongodb-community-server:6.0-ubi8
+    image: mongo:latest
     environment:
       - MONGO_INITDB_ROOT_USERNAME=${MONGO_USER:-admin}
       - MONGO_INITDB_ROOT_PASSWORD=${MONGO_PASSWORD:-admin}
@@ -111,9 +117,10 @@ services:
       - app-network
     healthcheck:
       test: echo 'db.runCommand("ping").ok' | mongosh localhost:27017/test --quiet
-      interval: 5s
-      timeout: 5s
-      retries: 5
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 20s
 
   rabbitmq:
     image: rabbitmq:3-alpine
