--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -36,6 +36,7 @@ services:
       - API_URL=http://backend:8080
       - CORS_ORIGIN=http://localhost:3000  # Frontend URL
       - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY}
+      - SESSION_SECRET=${SESSION_SECRET}
     networks:
       - app-network
     depends_on:
