--- a/packages/resume-parser/Dockerfile.prod
+++ b/packages/resume-parser/Dockerfile.prod
@@ -1,6 +1,6 @@
-FROM debian:bookworm-slim
+FROM ubuntu:22.04
 
-# Install runtime dependencies only
+# Install runtime dependencies
 RUN apt-get update && \
     apt-get install -y openssl ca-certificates && \
     rm -rf /var/lib/apt/lists/*
