--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,187 +1,174 @@
+version: '3.8'
 services:
   frontend:
-    build: 
+    build:
       context: .
-      dockerfile: Dockerfile.dev
-    volumes:
-      - .:/app
-      - /app/node_modules
-      - /app/packages/frontend/node_modules
-      - /app/packages/frontend/.turbo
-      - /app/packages/frontend/dist
+      dockerfile: Dockerfile
+      target: frontend
     ports:
-      - "5173:5173"
-    environment:
-      - CHOKIDAR_USEPOLLING=true
-      - WATCHPACK_POLLING=true
-    command: sh -c "cd packages/frontend && npm run dev -- --host"
-    depends_on:
-      backend:
-        condition: service_healthy
+      - "3000:80"
     networks:
       - app-network
+    depends_on:
+      - backend
 
   backend:
     build:
       context: .
       dockerfile: Dockerfile
-    volumes:
-      - .:/app
-      - /app/node_modules
+      target: backend
     ports:
       - "8080:8080"
     environment:
-      - DATABASE_URL=postgresql://postgres:postgres@db:5432/oomi
-      - JWT_SECRET=${JWT_SECRET}
+      - NODE_ENV=development
+      - DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/oomi
       - MONGODB_URI=mongodb://${MONGO_USER}:${MONGO_PASSWORD}@mongodb:27017/oomi?authSource=admin
       - RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672
-    command: >
-      sh -c "
-        cd packages/backend &&
-        npm install -g tsx &&
-        npx prisma generate &&
-        npx prisma db push --accept-data-loss &&
-        npm run dev
-      "
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8080/health"]
-      interval: 10s
-      timeout: 5s
-      retries: 3
-      start_period: 30s
+      - JWT_SECRET=${JWT_SECRET}
+      - BUCKET_NAME=${BUCKET_NAME}
+      - AWS_REGION=${AWS_REGION}
+      - AWS_ENDPOINT_URL_S3=${AWS_ENDPOINT_URL_S3}
+      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
+      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
+      - PORT=8080
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - API_URL=http://backend:8080
+      - CORS_ORIGIN=http://localhost:3000  # Frontend URL
+      - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY}
+      - SESSION_SECRET=${SESSION_SECRET}
+    networks:
+      - app-network
     depends_on:
       db:
-        condition: service_healthy
-      rabbitmq:
         condition: service_healthy
       mongodb:
         condition: service_healthy
-    networks:
-      - app-network
-      - db-network
-      - queue-network
-
-  db:
-    image: postgres:15
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: oomi
-    ports:
-      - "5432:5432"
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
-      interval: 5s
-      timeout: 5s
-      retries: 5
-    networks:
-      - db-network
-
-  prisma-studio:
-    build: 
-      context: .
-      dockerfile: Dockerfile.dev
-    ports:
-      - "5555:5555"
-    environment:
-      - DATABASE_URL=postgresql://postgres:postgres@db:5432/oomi
+      rabbitmq:
+        condition: service_healthy
     command: >
       sh -c "
-      cd packages/backend &&
-      npx prisma migrate deploy &&
-      npx prisma generate &&
-      npx prisma studio --hostname 0.0.0.0 --port 5555 --browser none
+        echo 'Waiting for database...' &&
+        /app/wait-for-it.sh db:5432 &&
+        npx prisma generate &&
+        npx prisma db push --skip-generate --accept-data-loss &&
+        node dist/index.js
       "
-    depends_on:
-      db:
-        condition: service_healthy
-    networks:
-      - db-network
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8080/health"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
   resume-parser:
     build:
-      context: .
-      dockerfile: packages/resume-parser/Dockerfile
-      cache_from:
-        - rust:1.83-slim
-    env_file: .env
-    volumes:
-      - cargo-cache:/usr/local/cargo/registry
-    ports:
-      - "3001:3001"
+      context: ./packages/resume-parser
+      dockerfile: Dockerfile
     environment:
-      - RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672
-      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
-      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
+      - BUCKET_NAME=${BUCKET_NAME}
       - AWS_REGION=${AWS_REGION}
       - AWS_ENDPOINT_URL_S3=${AWS_ENDPOINT_URL_S3}
-      - BUCKET_NAME=${BUCKET_NAME}
-      - RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672/
-      - RUST_LOG=resume_parser=debug,info
+      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
+      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
+      - RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672
+      - API_URL=http://backend:8080
+    networks:
+      - app-network
     depends_on:
       rabbitmq:
         condition: service_healthy
-      db:
-        condition: service_healthy
-    restart: unless-stopped
+
+  db:
+    image: postgres:15-alpine
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+      - ./docker/postgres/init.sql:/docker-entrypoint-initdb.d/init.sql
+    environment:
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=oomi
     healthcheck:
-      test: ["CMD", "test", "-f", "/app/config/default.yaml"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d oomi"]
       interval: 10s
       timeout: 5s
-      retries: 3
+      retries: 5
+      start_period: 10s
     networks:
       - app-network
-      - queue-network
-
-  rabbitmq:
-    image: rabbitmq:3-management
-    ports:
-      - "5672:5672"   # AMQP protocol port
-      - "15672:15672" # Management UI
-    environment:
-      - RABBITMQ_DEFAULT_USER=guest
-      - RABBITMQ_DEFAULT_PASS=guest
-    healthcheck:
-      test: ["CMD", "rabbitmqctl", "status"]
-      interval: 30s
-      timeout: 10s
-      retries: 5
-      start_period: 40s  # Give RabbitMQ time to start up
-    networks:
-      - queue-network
 
   mongodb:
-    image: mongodb/mongodb-community-server:6.0-ubi8
-    ports:
-      - "27017:27017"
+    image: mongo:latest
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=${MONGO_USER:-admin}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_PASSWORD:-admin}
+      - MONGO_INITDB_DATABASE=oomi
     volumes:
       - mongodb_data:/data/db
-      - ./docker/mongodb/init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js:ro
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: ${MONGO_USER}
-      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PASSWORD}
-      MONGO_INITDB_DATABASE: oomi
+      - ./docker/mongodb/init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js
+    ports:
+      - "27017:27017"
+    networks:
+      - app-network
     healthcheck:
-      test: ["CMD", "mongosh", "--eval", "db.adminCommand('ping')"]
+      test: echo 'db.runCommand("ping").ok' | mongosh localhost:27017/test --quiet
       interval: 30s
       timeout: 10s
       retries: 3
       start_period: 20s
+
+  rabbitmq:
+    image: rabbitmq:3-alpine
+    volumes:
+      - rabbitmq_data:/var/lib/rabbitmq
+    ports:
+      - "5672:5672"
+      - "15672:15672"
     networks:
-      - db-network
+      - app-network
+    healthcheck:
+      test: ["CMD", "rabbitmq-diagnostics", "check_port_connectivity"]
+      interval: 20s
+      timeout: 10s
+      retries: 5
+
+  prisma-studio:
+    build:
+      context: .
+      dockerfile: Dockerfile
+      target: backend
+    command: >
+      sh -c "
+        echo 'Waiting for database...' &&
+        sleep 5 &&
+        cd /app &&
+        npx prisma generate &&
+        npx prisma studio --hostname 0.0.0.0 --port 5555 --browser none
+      "
+    ports:
+      - "5555:5555"
+    environment:
+      - DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/oomi
+    volumes:
+      - ./packages/backend/prisma:/app/prisma
+    networks:
+      - app-network
+    depends_on:
+      db:
+        condition: service_healthy
 
 volumes:
   postgres_data:
-  resume_parser_target:
   mongodb_data:
-  cargo-cache:
+  rabbitmq_data:
+  postgres_logs:
 
 networks:
   app-network:
-    driver: bridge
-  db-network:
-    driver: bridge
-  queue-network:
     driver: bridge
